--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/SLemons6/employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.2",
-    "uuid": "^8.3.2"
+    "sequelize": "^6.8.0"
   }
 }
