--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.2",
     "sequelize": "^6.8.0"
